Ejercicios/Tema4/Tema4.2/Ejercicio2/mi-deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment1
spec:
  replicas: 1
  selector:
    matchLabels:
      modulo: deployment1
  template:
    metadata:
      labels:
        modulo: deployment1
    spec: 
      containers:
      - name: pod1
        image: ulopeznovoa/k8s-red-cliente
        ports:
        - containerPort: 5000
