Ejercicios/Tema4/Tema4.2/Ejercicio2/mi-deployment3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment3
spec:
  replicas: 1
  selector:
    matchLabels:
      modulo: deployment3
  template:
    metadata:
      labels:
        modulo: deployment3
    spec: 
      containers:
      - name: pod3
        image: ulopeznovoa/k8s-red-help
        ports:
        - containerPort: 5000
