Ejercicios/Tema4/Tema4.2/Ejercicio2/mi-cluterip1.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster1
spec:
  type: ClusterIP
  selector:
    modulo: pod1
  ports:
  - port: 80
    targetPort: 5000
