Ejercicios/Tema4/Tema4.2/Ejercicio2/mi-cluterip2.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster2
spec:
  tpye: ClusterIP
  selector:
    modulo: pod2
  ports:
  - port: 6379
    targetPort: 6379
