Ejercicios/Tema4/Tema4.2/Ejercicio2/mi-cluterip3.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster3
spec:
  type: ClusterIP
  selector:
    modulo: deployment3
  ports:
  - port: 80
    targetPort: 5000
