Ejercicios/Tema4/Tema4.2/Ejercicio2/mi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cluster1
            port:
              number: 80
      - path: /ayuda
        pathType: Prefix
        backend:
          service:
            name: cluster3
            port:
              number: 80
